fix links styles, fix single-tags padding on mobile

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h2 {font-size: 36px;}
 h3 {font-size: 24px;}
 h4 {font-size: 18px;}
 h5, a {font-size: 16px;}
-p {font-size: 16px; color: #333;line-height: 1.6471}
+p {font-size: 16px; color: #777;line-height: 1.6471}
 
 @media screen and (max-width: 992px) {
     h2 {font-size: 24px!important;}
@@ -577,7 +577,7 @@ button:hover {
     font-weight: bold;
 }
 
-.site-footer-meta{
+.site-footer-meta, .site-footer-meta a {
     font-size: 12px;
     color: #fff!important;
     font-weight: lighter;
@@ -1099,6 +1099,12 @@ li.widget .widgettitle {
     padding: 20px 40px;
 }
 
+@media screen and (max-width: 575px) {
+    .single-tags {
+        padding: 20px 20px;
+    }
+}
+
 .single-tags a[rel="tag"]:hover,
 .single-tags a[rel="tag"]:focus,
 .tagcloud a:hover,
@@ -1306,12 +1312,6 @@ big {
  * 3.0 Elements
  */
 
-hr {
-	background-color: #E94B3C;
-	border: 0;
-	height: 2px;
-	margin-bottom: 28px;
-}
 
 .single-text ul,
 .single-text ol {
@@ -1411,6 +1411,12 @@ del {
 	border-bottom: 1px solid #333;
 	color: #333;
 	text-decoration: none;
+}
+
+.single-text a:hover  {
+    text-decoration: none;
+    border-bottom: 1px solid #d92919;
+	color: #d92919;
 }
 
 
